--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <h5 class="card-title">Prashant Jha</h5>
             <p class="card-text">I'm a Data Science enthusiast who loves to play with machine learning.</p>
             <p>Click the link below to know about me!</p>
-            <a href="https://www.linkedin.com/in/prashant-jha-10ab3a142/" class="btn btn-primary" target="_blank">Linkedin</a>
+            <a href="https://www.https://www.linkedin.com/in/jaydeep-d-ba1b75a6/" class="btn btn-primary" target="_blank">Linkedin</a>
           </div>
         </div>
       </div>
