--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Recommendor System</title>
-    <link rel="shortcut icon" href="/static/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -23,11 +22,11 @@
     <div class="card mb-3" style="max-width: 650px;">
       <div class="row no-gutters">
         <div class="col-md-4">
-          <img src="/static/profile.jpg" class="card-img" alt="...">
+          <img src="/static/jaydeep.jpg" class="card-img" alt="...">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Prashant Jha</h5>
+            <h5 class="card-title">Jaydeep Dixit</h5>
             <p class="card-text">I'm a Data Science enthusiast who loves to play with machine learning.</p>
             <p>Click the link below to know about me!</p>
             <a href="https://www.https://www.linkedin.com/in/jaydeep-d-ba1b75a6/" class="btn btn-primary" target="_blank">Linkedin</a>
