--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">Jaydeep Dixit</h5>
-            <p class="card-text">I'm a Data Science enthusiast who loves to play with machine learning.</p>
+            <p class="card-text">I'm a Data Science enthusiast interested in solving real life problems.</p>
             <p>Click the link below to know about me!</p>
             <a href="https://www.https://www.linkedin.com/in/jaydeep-d-ba1b75a6/" class="btn btn-primary" target="_blank">Linkedin</a>
           </div>
