--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="shadow p-3 mb-5 bg-white rounded">
-  <h1 style="color:rgb(0, 102, 255)">Welcome to the Movie recommender</h1>
-  <h3 style="color:rgb(0, 102, 255)">Enter the Hollywood movie you like to get recommendations.</h3>
+  <h1 style="color:rgb(0, 102, 255)">Movie recommendation web-app</h1>
+  <h3 style="color:rgb(0, 102, 255)">Enter the Hollywood movie to get similar recommendations.</h3>
 </div>
 
   <form action="{{url_for('recommend')}}">
